# prologue

./: .gitignore  LICENSE  README.md  meson.build
examples/: meson.build
examples/HelloWorld/: main.cpp  meson.build
include/: meson.build
include/prologue/: Backtrace.h  IFormatable.h  prologue.h
include/prologue/core/: Config.h  File.h  Platform.h  PrologueSTL.h
src/: meson.build
src/prologue/: prologue.cpp
src/prologue/backtrace/: Backtrace.cpp  BacktraceLinux.cpp  BacktraceWindows.cpp
src/prologue/core/: Config.h  Platform.h  PrologueSTL.h  Types.h
src/prologue/core/Linux/: OSAdapterLinux.cpp
src/prologue/core/Windows/: OSAdapterWindows.cpp
tests/: meson.build
